# napari-plot-profile

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.napari/: config.yml
docs/: blobs_timelapse.tif  demo.ipynb  demo.py
napari_plot_profile/: __init__.py  _dock_widget.py  _functions.py
napari_plot_profile/_tests/: test_dock_widget.py  test_functions.py
