[metadata]
name = napari-plot-profile
version = 0.0.1
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-plot-profile
license = BSD-3-Clause
description = Plot intensity along a line in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-plot-profile/issues
    Documentation = https://github.com/haesleinhuepf/napari-plot-profile#README.md
    Source Code = https://github.com/haesleinhuepf/napari-plot-profile
    User Support = https://github.com/haesleinhuepf/napari-plot-profile/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    Measurements (Plot profile) = napari_plot_profile
